styling and text changes

--- a/Scss/layout/_portfolioPage.scss
+++ b/Scss/layout/_portfolioPage.scss
@@ -216,6 +216,7 @@
 
                         a {
                             color: royalblue;
+                            margin-right: 12px;
                         }
 
                         a:hover {
